--- a/frontend/src/components/ProfilePage/Bookings/Bookings.module.css
+++ b/frontend/src/components/ProfilePage/Bookings/Bookings.module.css
@@ -80,6 +80,7 @@
 	cursor: pointer;
 	color: white;
 	font-weight: 400;
+	text-align: center;
 }
 
 .edit {
