--- a/frontend/src/components/ProfilePage/MySpots/MySpots.module.css
+++ b/frontend/src/components/ProfilePage/MySpots/MySpots.module.css
@@ -1,23 +1,26 @@
 .spots_container {
 	width: 100%;
-	padding: 20px 20px 20px 0;
+	padding: 20px;
 	margin-top: 20px;
 }
 .my_each_spot {
-	width: 90%;
+	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	border: 1px solid black;
 	margin-bottom: 30px;
 	border-radius: 10px;
 	overflow: hidden;
-	background: linear-gradient(45deg, rgb(255, 255, 255), #c1c1c1);
+	background-image: radial-gradient(
+		circle farthest-corner at 10% 20%,
+		rgba(90, 92, 106, 1) 0%,
+		rgba(32, 45, 58, 1) 81.3%
+	);
 	cursor: pointer;
 	transition: all 0.25s ease-in-out;
+	box-sizing: border-box;
 }
 
 .my_each_spot img {
-	width: 300px;
 	height: 200px;
 	object-fit: cover;
 	filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.328));
@@ -30,11 +33,13 @@
 	align-items: center;
 	text-align: center;
 	font-size: 18px;
+	width: 100%;
+	padding: 10px;
 }
 
 .spot_info * {
 	overflow-wrap: break-word;
-	width: 400px;
+	width: 100%;
 }
 
 .my_each_spot:hover {
